--- a/src/_scss/main.scss
+++ b/src/_scss/main.scss
@@ -20,7 +20,11 @@ $input-shadow: none;
 @import "dev/grid-overlay";
 
 // Layouts
+@import "layout/layout";
 @import "layout/page";
 
 // Components
 @import "components/fieldset";
+@import "components/overlay";
+@import "components/sidebar";
+@import "components/hamburgers";
