Feat 2: Fejléc kialakítása

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -8,7 +8,7 @@
     {% include _sidebar.html %}
     
     <div class="l-admin__content page-content">
-      <!--{% include _navbar.html %}-->
+      {% include _header.html %}
       {{ content }}
     </div>
   </div>
