--- a/src/_scss/components/_hamburgers.scss
+++ b/src/_scss/components/_hamburgers.scss
@@ -2,8 +2,8 @@
 // Hamburgers menü
 // --------------------------------------------------
 
-$hamburger-padding-x                       : 10px !default;
-$hamburger-padding-y                       : 10px !default;
+$hamburger-padding-x                       : 16px !default;
+$hamburger-padding-y                       : 16px !default;
 $hamburger-layer-width                     : 24px !default;
 $hamburger-layer-height                    : 3px !default;
 $hamburger-layer-spacing                   : 4px !default;
@@ -35,6 +35,10 @@ $hamburger-types: (
   position: fixed;
   left: 0;
   top: 0;
+
+  &.is-active {
+    background-color: transparent;
+  }
 
 
   @include desktop {
